build(deps): update .hintrc, package-lock.json, package.json and tsconfig.json

--- a/.hintrc
+++ b/.hintrc
@@ -3,6 +3,7 @@
     "development"
   ],
   "hints": {
-    "axe/name-role-value": "off"
+    "axe/name-role-value": "off",
+    "typescript-config/consistent-casing": "off"
   }
 }
