--- a/client/package.json
+++ b/client/package.json
@@ -26,8 +26,6 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@types/i18next": "^13.0.0",
-    "@types/react-i18next": "^8.1.0",
     "@types/react-router": "^5.1.20",
     "@vercel/analytics": "^1.3.1",
     "animate.css": "^4.1.1",
@@ -36,7 +34,6 @@
     "date-fns": "^3.0.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
-    "emailjs-com": "^3.2.0",
     "framer-motion": "^11.5.4",
     "i18next": "^23.7.11",
     "i18next-browser-languagedetector": "^7.2.0",
@@ -81,5 +78,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
