--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Raouf Zahdi",
+  "name": "baraa",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,12 +13,17 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
@@ -26,33 +31,52 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-hook/media-query": "^1.1.1",
+    "@tanstack/react-table": "^8.20.5",
+    "@types/i18next": "^13.0.0",
+    "@types/react-i18next": "^8.1.0",
     "@types/react-router": "^5.1.20",
-    "@vercel/analytics": "^1.3.1",
+    "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "date-fns": "^3.0.0",
-    "dayjs": "^1.11.13",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
-    "framer-motion": "^11.5.4",
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^11.11.9",
     "i18next": "^23.7.11",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.3",
     "input-otp": "^1.2.4",
+    "ipad-cursor": "^0.5.2",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "lenis": "^1.0.45",
     "lucide-react": "^0.302.0",
+    "motion-number": "^0.1.7",
     "next-themes": "^0.2.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-color": "^2.19.3",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-i18next": "^14.0.0",
     "react-icons": "^4.12.0",
+    "react-intersection-observer": "^9.8.0",
+    "react-jwt": "^1.2.2",
     "react-resizable-panels": "^2.1.3",
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
     "react-scroll": "^1.9.0",
     "react-select": "^5.8.0",
     "recharts": "^2.12.7",
+    "rollup": "^4.12.0",
     "sonner": "^1.3.1",
+    "styled-components": "^6.1.6",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.8.0"
@@ -60,7 +84,7 @@
   "devDependencies": {
     "@types/aos": "^3.0.7",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^22.8.2",
+    "@types/node": "^20.10.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.18",
     "@types/react-scroll": "^1.8.10",
@@ -78,8 +102,5 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
-  },
-  "engines": {
-    "node": ">=20.0.0"
   }
 }
