--- a/client/package.json
+++ b/client/package.json
@@ -66,6 +66,7 @@
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.8.0",
     "react-jwt": "^1.2.2",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-resizable-panels": "^2.1.3",
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
