--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "baraa",
+  "name": "raouf_zadi",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -36,9 +36,6 @@
     "@types/i18next": "^13.0.0",
     "@types/react-i18next": "^8.1.0",
     "@types/react-router": "^5.1.20",
-    "animate.css": "^4.1.1",
-    "aos": "^3.0.0-beta.6",
-    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.28.0",
@@ -48,31 +45,21 @@
     "i18next": "^23.7.11",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.3",
-    "input-otp": "^1.2.4",
-    "ipad-cursor": "^0.5.2",
-    "js-cookie": "^3.0.5",
-    "jsonwebtoken": "^9.0.2",
-    "jwt-decode": "^4.0.0",
     "lenis": "^1.0.45",
     "lucide-react": "^0.302.0",
-    "motion-number": "^0.1.7",
     "next-themes": "^0.2.1",
     "react": "^18.3.1",
-    "react-beautiful-dnd": "^13.1.1",
     "react-color": "^2.19.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.0.0",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.8.0",
-    "react-jwt": "^1.2.2",
-    "react-lazy-load-image-component": "^1.6.2",
     "react-resizable-panels": "^2.1.3",
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
     "react-scroll": "^1.9.0",
     "react-select": "^5.8.0",
-    "recharts": "^2.12.7",
     "rollup": "^3.0.0",
     "sonner": "^1.3.1",
     "styled-components": "^6.1.6",
@@ -81,8 +68,6 @@
     "vaul": "^0.8.0"
   },
   "devDependencies": {
-    "@types/aos": "^3.0.7",
-    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.18",
